<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.2.6.RELEASE</version>
		<!--<version>2.6.7</version>-->
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

	<groupId>com.telefonica</groupId>
	<artifactId>weblogic-kafka-integration</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>Weblogic Kafka Integration</name>
	<description>Weblogic Kafka Integration Service</description>

	<properties>
		<java.version>1.8</java.version>
		<maven.compiler.target>1.8</maven.compiler.target>
		 <maven.compiler.target>1.8</maven.compiler.target>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
				<exclusions>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-tomcat</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!--<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-tomcat</artifactId>
			<scope>provided</scope>
		</dependency>-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-jms</artifactId>
		</dependency>
		<dependency>
			<groupId>javax.jms</groupId>
			<artifactId>javax.jms-api</artifactId>
			<version>2.0</version>
		</dependency>
		<dependency>
			<groupId>wls</groupId>
			<artifactId>wlsclient</artifactId>
			<version>1.0</version>
			<!--<scope>system</scope>
			<systemPath>${basedir}/src/main/resources/lib/wlthint3client.jar</systemPath>-->
		</dependency>
		<dependency>
			<groupId>com.telefonica</groupId>
			<artifactId>events-schemas</artifactId>
			<version>2.0</version>
			<!--<scope>system</scope>
			<systemPath>${basedir}/src/main/resources/lib/events-schemas-2.0.jar</systemPath>-->
		</dependency>
		<dependency>
			<groupId>org.springframework.kafka</groupId>
			<artifactId>spring-kafka</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.kafka</groupId>
			<artifactId>spring-kafka-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-test-autoconfigure</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
                	<jvmArguments>--add-opens java.base/java.io=ALL-UNNAMED</jvmArguments>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.12</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			 <!-- Maven Surefire Plugin for running tests -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>--add-opens java.base/java.io=ALL-UNNAMED</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>containerize</id>
			<build>
				<plugins>
					<plugin>
						<groupId>io.fabric8</groupId>
						<artifactId>docker-maven-plugin</artifactId>
						<version>0.45.0</version>
						<configuration>
						<images>
							<image>
								<!-- Nomenclature of placeholder
								%g=The last part of the Maven group name corresponds to telefonica here
								%v=The project version. Synonym to ${project.version}
								....................................... -->
								<name>%g/weblogic-kafka-integration:%v</name>
								<!-- ....................................... -->
								<!-- Build configuration for creating images -->
								<!-- ....................................... -->
								<build>
								<dockerFile>Dockerfile</dockerFile>
								<assembly>
									<!--Details of maven assembly plugin can be found at:
									https://maven.apache.org/plugins/maven-assembly-plugin/assembly.html-->
									<basedir>/</basedir>
									<inline xmlns="http://maven.apache.org/ASSEMBLY/2.2.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
										xsi:schemaLocation="http://maven.apache.org/ASSEMBLY/2.2.0 https://maven.apache.org/xsd/assembly-2.2.0.xsd">
									<fileSets>
										<fileSet>
										<directory>${project.basedir}/src/main/docker</directory>
										<outputDirectory>/</outputDirectory>
										<includes>
										<include>docker-entrypoint.sh</include>
										</includes>
										<fileMode>755</fileMode>
										</fileSet>
										<fileSet>
										<directory>${project.basedir}/target</directory>
										<outputDirectory>/</outputDirectory>
										<includes>
										<include>weblogic-kafka-integration-*.jar</include>
										</includes>
										<fileMode>755</fileMode>
										</fileSet>
									</fileSets>
									</inline>
								</assembly>
								<tags>
								<tag>${project.version}</tag>
								<tag>latest</tag>
								</tags>
								</build>
							</image>
						</images>
						</configuration>
						<!-- Hooking into the lifecycle -->
						<executions>
							<execution>
								<id>build</id>
								<goals>
									<goal>build</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>